--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,6 +1,8 @@
-var path = require('path');
-var config = require('config');
+var path = require('path')
 
-config.database.config = __filename;
-
-module.exports = config.database;
+module.exports = {
+  'config':          path.resolve('config', 'config.json'),
+  'migrations-path': path.resolve('src', 'migrations'),
+  'models-path': path.resolve( 'src', 'models'),
+  'seeders-path': path.resolve('src', 'seeders')
+}
