--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "hapi-boilerplate",
   "version": "0.0.4",
   "description": "A Hapi boilerplate with Sequelize, Sequelize-CLI and node-config",
-  "main": "server.js",
+  "main": "build/server.js",
   "author": "miguelcobain <jmandrade0@gmail.com>",
   "license": "ISC",
+  "scripts": {
+    "start": "node build/server.js",
+    "start:dev": "nodemon build/server.js"
+  },
   "keywords": [
     "hapi",
     "node",
@@ -19,18 +23,29 @@
     "url": "https://github.com/miguelcobain/hapi-boilerplate/issues"
   },
   "dependencies": {
+    "async": "^2.0.1",
+    "bcrypt": "^0.8.7",
     "boom": "^2.6.1",
-    "config": "^1.8.1",
-    "good": "^5.1.1",
-    "good-console": "^2.1.0",
-    "hapi": "^8.1.0",
+    "config": "^1.21.0",
+    "good": "^7.0.2",
+    "good-console": "^6.1.2",
+    "good-file": "^6.0.1",
+    "good-http": "^6.1.0",
+    "good-squeeze": "^5.0.0",
+    "hapi": "^15.0.3",
+    "hapi-auth-jwt2": "^7.1.3",
+    "inert": "^4.0.2",
+    "joi": "^9.0.4",
+    "jsonwebtoken": "^7.1.9",
     "pg": "^3.6.3",
-    "pg-hstore": "^2.3.1",
+    "pg-hstore": "^2.3.2",
+    "randomstring": "^1.1.5",
     "require-directory": "^2.0.0",
-    "sequelize": "^2.0.0-rc7"
+    "sequelize": "^3.24.3"
   },
   "devDependencies": {
     "lab": "^4.7.0",
-    "sqlite3": "^3.0.2"
+    "sqlite3": "^3.0.2",
+    "typescript": "^1.8.10"
   }
 }
