--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "hapi-boilerplate",
   "version": "0.0.4",
   "description": "A Hapi boilerplate with Sequelize, Sequelize-CLI and node-config",
-  "main": "build/server.js",
+  "main": "src/server.js",
   "author": "miguelcobain <jmandrade0@gmail.com>",
   "license": "ISC",
   "scripts": {
-    "start": "node build/server.js",
+    "start": "node src/server.js",
     "herouku-prebuild": "npm install -g pm2 typescript typings && cd src && typings install && tsc -p",
-    "start:dev": "nodemon build/server.js"
+    "start:dev": "nodemon src/server.js"
   },
   "keywords": [
     "hapi",
@@ -36,15 +36,18 @@
     "hapi": "^15.0.3",
     "hapi-auth-jwt2": "^7.1.3",
     "hapi-authorization": "^3.0.2",
+    "hapi-swagger": "^7.2.0",
     "inert": "^4.0.2",
     "joi": "^9.0.4",
     "jsonwebtoken": "^7.1.9",
     "mega": "^0.2.0",
+    "nodemailer": "^2.6.4",
     "pg": "3.6.3",
     "pg-hstore": "^2.3.2",
     "randomstring": "^1.1.5",
     "require-directory": "^2.0.0",
-    "sequelize": "^3.24.3"
+    "sequelize": "^3.24.3",
+    "vision": "^4.1.0"
   },
   "devDependencies": {
     "lab": "^4.7.0",
