--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node src/server.js",
     "herouku-prebuild": "npm install -g pm2 typescript typings && cd src && typings install && tsc -p",
-    "start:dev": "nodemon src/server.js"
+    "start:dev": "nodemon src/server.js --ignore client"
   },
   "keywords": [
     "hapi",
@@ -39,6 +39,7 @@
     "hapi-swagger": "^7.2.0",
     "inert": "^4.0.2",
     "joi": "^9.0.4",
+    "js-cookie": "^2.1.3",
     "jsonwebtoken": "^7.1.9",
     "mega": "^0.2.0",
     "nodemailer": "^2.6.4",
@@ -47,6 +48,7 @@
     "randomstring": "^1.1.5",
     "require-directory": "^2.0.0",
     "sequelize": "^3.24.3",
+    "ssacl-attribute-roles": "0.0.5",
     "vision": "^4.1.0"
   },
   "devDependencies": {
