--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -16,7 +16,6 @@ rules:
   camelcase: 2
   computed-property-spacing: [ 2, 'never' ]
   consistent-return: 2
-  curly: [ 2, 'multi' ]
   dot-notation: 0
   eol-last: 2
   eqeqeq: 2
@@ -33,7 +32,7 @@ rules:
   no-var: 2
   object-curly-spacing: [ 2, 'always' ]
   quotes: [ 2, 'single' ]
-  semi: [ 2, 'never' ]
+  semi: [ 2, 'always' ]
   space-after-keywords: [ 2, 'always' ]
   space-before-blocks: [ 2, 'always' ]
   space-before-function-paren: [ 2, 'always' ]
