--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^0.8.7",
     "boom": "^2.6.1",
     "config": "^1.21.0",
+    "excellentexport": "^1.5.0",
     "good": "^7.0.2",
     "good-console": "^6.1.2",
     "good-file": "^6.0.1",
