--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "require-directory": "^2.0.0",
     "sequelize": "^3.24.3",
     "ssacl-attribute-roles": "0.0.5",
-    "vision": "^4.1.0"
+    "tedious": "^1.14.0",
+    "vision": "^4.1.0",
+    "xlsx": "^0.8.0"
   },
   "devDependencies": {
     "lab": "^4.7.0",
