--- a/client/package.json
+++ b/client/package.json
@@ -27,23 +27,32 @@
   "dependencies": {
     "async": "^2.0.1",
     "bootstrap": "^3.3.7",
+    "bootstrap-fileinput": "^4.3.4",
     "classnames": "~2.2.3",
+    "css-loader": "^0.23.1",
     "excellentexport": "^1.5.0",
     "file-loader": "^0.9.0",
+    "fixed-data-table": "^0.6.3",
     "history": "~1.17.0",
     "intl": "~1.0.1",
+    "jquery": "^3.1.1",
+    "material-ui": "^0.15.4",
+    "node-sass": "^3.10.1",
     "parse-link-header": "~0.4.1",
     "purecss": "~0.6.0",
     "react": "~0.14.6",
     "react-bootstrap": "^0.30.3",
     "react-dom": "~0.14.6",
     "react-intl": "2.0.0-beta-1",
+    "react-notification": "^6.2.1",
     "react-pure-render": "~1.0.2",
     "react-redux": "~4.0.6",
     "react-router": "~1.0.3",
     "redux": "~3.0.5",
     "redux-router": "~1.0.0-beta7",
     "redux-thunk": "^2.1.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "whatwg-fetch": "~0.10.1"
   },
