--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "async": "^2.0.1",
     "bcrypt": "^0.8.7",
     "boom": "^2.6.1",
+    "bootstrap-fileinput": "^4.3.4",
     "config": "^1.21.0",
     "excellentexport": "^1.5.0",
     "good": "^7.0.2",
@@ -41,6 +42,7 @@
     "hapi-swagger": "^7.2.0",
     "inert": "^4.0.2",
     "joi": "^9.0.4",
+    "jquery": "^3.1.1",
     "js-cookie": "^2.1.3",
     "jsonwebtoken": "^7.1.9",
     "mega": "^0.2.0",
