--- a/client/package.json
+++ b/client/package.json
@@ -40,14 +40,15 @@
     "node-sass": "^3.10.1",
     "parse-link-header": "~0.4.1",
     "purecss": "~0.6.0",
-    "react": "~0.14.6",
+    "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
-    "react-dom": "~0.14.6",
+    "react-dom": "^15.3.2",
     "react-intl": "2.0.0-beta-1",
     "react-notification": "^6.2.1",
     "react-pure-render": "~1.0.2",
     "react-redux": "~4.0.6",
-    "react-router": "~1.0.3",
+    "react-router": "^2.8.1",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "~3.0.5",
     "redux-router": "~1.0.0-beta7",
     "redux-thunk": "^2.1.0",
