--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "devDependencies": {
     "lab": "^4.7.0",
     "sqlite3": "^3.0.2",
-    "typescript": "^1.8.10"
+    "typescript": "^1.8.10",
+    "underscore": "^1.8.3"
   }
 }
