--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "start:devForce": "nodemon src/server.js --ignore client true",
     "start:dev": "nodemon src/server.js --ignore client"
   },
+  "engines": {
+      "node":"6.6.0"
+  },
   "keywords": [
     "hapi",
     "node",
