--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start:dev": "nodemon src/server.js --ignore client"
   },
   "engines": {
-      "node":"6.6.0"
+    "node": "6.6.0"
   },
   "keywords": [
     "hapi",
@@ -33,6 +33,7 @@
     "boom": "^2.6.1",
     "bootstrap-fileinput": "^4.3.4",
     "config": "^1.21.0",
+    "csharp-runner": "latest",
     "excellentexport": "^1.5.0",
     "good": "^7.0.2",
     "good-console": "^6.1.2",
@@ -48,6 +49,7 @@
     "jquery": "^3.1.1",
     "js-cookie": "^2.1.3",
     "jsonwebtoken": "^7.1.9",
+    "lab": "^4.7.0",
     "mega": "^0.2.0",
     "nodemailer": "^2.6.4",
     "pg": "3.6.3",
@@ -55,13 +57,13 @@
     "randomstring": "^1.1.5",
     "require-directory": "^2.0.0",
     "sequelize": "^3.24.3",
-    "ssacl-attribute-roles": "0.0.5",
-    "tedious": "^1.14.0",
-    "vision": "^4.1.0",
-    "xlsx": "^0.8.0",
-    "lab": "^4.7.0",
     "sqlite3": "^3.0.2",
+    "ssacl-attribute-roles": "0.0.5",
+    "stringformat": "0.0.5",
+    "tedious": "^1.14.0",
     "typescript": "^1.8.10",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "vision": "^4.1.0",
+    "xlsx": "^0.8.0"
   }
 }
